--- a/FaveButtonDemo/SparkImageView.xcodeproj/xcshareddata/xcschemes/FaveButtonDemo.xcscheme
+++ b/FaveButtonDemo/SparkImageView.xcodeproj/xcshareddata/xcschemes/FaveButtonDemo.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "26FEF33E1D0E159B00D75731"
-               BuildableName = "FaveButton.framework"
-               BlueprintName = "FaveButton"
-               ReferencedContainer = "container:FaveButtonDemo.xcodeproj">
+               BlueprintIdentifier = "26FEF3241D0E158100D75731"
+               BuildableName = "SparkImageView.app"
+               BlueprintName = "SparkImageView"
+               ReferencedContainer = "container:SparkImageView.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "26FEF3241D0E158100D75731"
+            BuildableName = "SparkImageView.app"
+            BlueprintName = "SparkImageView"
+            ReferencedContainer = "container:SparkImageView.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "26FEF33E1D0E159B00D75731"
-            BuildableName = "FaveButton.framework"
-            BlueprintName = "FaveButton"
-            ReferencedContainer = "container:FaveButtonDemo.xcodeproj">
+            BlueprintIdentifier = "26FEF3241D0E158100D75731"
+            BuildableName = "SparkImageView.app"
+            BlueprintName = "SparkImageView"
+            ReferencedContainer = "container:SparkImageView.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "26FEF33E1D0E159B00D75731"
-            BuildableName = "FaveButton.framework"
-            BlueprintName = "FaveButton"
-            ReferencedContainer = "container:FaveButtonDemo.xcodeproj">
+            BlueprintIdentifier = "26FEF3241D0E158100D75731"
+            BuildableName = "SparkImageView.app"
+            BlueprintName = "SparkImageView"
+            ReferencedContainer = "container:SparkImageView.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
