--- a/FaveButtonDemo/SparkImageView.xcodeproj/xcshareddata/xcschemes/FaveButtonDemo.xcscheme
+++ b/FaveButtonDemo/SparkImageView.xcodeproj/xcshareddata/xcschemes/FaveButtonDemo.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "26FEF3241D0E158100D75731"
-               BuildableName = "SparkImageView.app"
-               BlueprintName = "SparkImageView"
+               BuildableName = "SparkImageViewDemo.app"
+               BlueprintName = "SparkImageViewDemo"
                ReferencedContainer = "container:SparkImageView.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "26FEF3241D0E158100D75731"
-            BuildableName = "SparkImageView.app"
-            BlueprintName = "SparkImageView"
+            BuildableName = "SparkImageViewDemo.app"
+            BlueprintName = "SparkImageViewDemo"
             ReferencedContainer = "container:SparkImageView.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -56,8 +56,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "26FEF3241D0E158100D75731"
-            BuildableName = "SparkImageView.app"
-            BlueprintName = "SparkImageView"
+            BuildableName = "SparkImageViewDemo.app"
+            BlueprintName = "SparkImageViewDemo"
             ReferencedContainer = "container:SparkImageView.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -75,8 +75,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "26FEF3241D0E158100D75731"
-            BuildableName = "SparkImageView.app"
-            BlueprintName = "SparkImageView"
+            BuildableName = "SparkImageViewDemo.app"
+            BlueprintName = "SparkImageViewDemo"
             ReferencedContainer = "container:SparkImageView.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
