--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,5 @@ osx_image: xcode8
 install:
   - gem install xcpretty
 
-script:
-  - set -o pipefail
-  - xcodebuild -version
-  - xcodebuild -project FaveButtonDemo/SparkImageView.xcodeproj -scheme "SparkImageView" -sdk iphonesimulator10.0 -destination 'platform=iOS Simulator,name=iPhone 6s,OS=10.0'
-      -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty -c
+script: 
+  - xcodebuild -project FaveButtonDemo/SparkImageView.xcodeproj  -scheme "FaveButtonDemo" -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s' | xcpretty
